buildscript {
    ext {
        // Spring
        springBootVersion = "3.2.1"
        springDependencyManagementVersion = "1.1.3"

        // QueryDsl
        queryDslVersion = "5.0.0"

        // Redis
        embeddedRedisVersion = "0.7.2"

        // Swagger
        springDocVersion = "2.2.0"
    }
}

plugins {
    id "org.springframework.boot" version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
    id "application"
}

allprojects {
    group = "com.threedollar"

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply {
        plugin "idea"
        plugin "java-library"
        plugin "org.springframework.boot"
        plugin "io.spring.dependency-management"
        plugin "java-test-fixtures"
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        // SpringBoot Validation
        implementation("org.springframework.boot:spring-boot-configuration-processor")

        implementation("org.springframework.boot:spring-boot-starter-validation")

        implementation 'org.springframework.boot:spring-boot-starter-jdbc'

        // SpringBoot Configuration Processor
        annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")

        // SpringBoot
        implementation ("org.springframework.boot:spring-boot-starter-web")

        // SpringBoot Test
        testImplementation("org.springframework.boot:spring-boot-starter-test")


        // Lombok
        compileOnly ("org.projectlombok:lombok")
        annotationProcessor("org.projectlombok:lombok")
        testCompileOnly("org.projectlombok:lombok")
        testAnnotationProcessor("org.projectlombok:lombok")

    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
